--- a/VSN_finops_Cloud/examples/dashboard.html
+++ b/VSN_finops_Cloud/examples/dashboard.html
@@ -38,7 +38,7 @@
           <li class="active ">
             <a href="./dashboard.html">
               <i class="tim-icons icon-chart-pie-36"></i>
-              <p>Dashboard</p>
+              <p>Dashboard VSN</p>
             </a>
           </li>
           <li>
